action gap fix

--- a/frontend/src/assets/styles/pages/TweetPage/TweetPage.module.scss
+++ b/frontend/src/assets/styles/pages/TweetPage/TweetPage.module.scss
@@ -91,7 +91,7 @@
 
 	&__actions {
 		@include flex-center();
-		gap: 75px;
+		gap: 72px;
 		padding-top: 12px;
 		border-top: 0.33px solid $gray;
 	}
